# ExalusAPI

./: Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
PyExalus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
exalusAPI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  main.py  test.py
src/exalusAPI/: __init__.py  __main__.py
src/exalusAPI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
