name = "PyExalus"
version = "0.0.1"
authors = [
  { name="Marcel Janicki", email="marcelzamel@gmail.com" },
]
description = "A simple wrapper for Exalus Home, created specifically for HomeAssistant integration."
readme = "README.md"
requires-python = ">=3.10.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/marceljanicki/PyExalus"