[project]
name = "PyExalus"
version = "0.2.1"
authors = [
  { name="Marcel Janicki", email="marcelzamel@gmail.com" },
]
description = "A simple wrapper for Exalus Home, created specifically for HomeAssistant integration."
readme = "README.md"
requires-python = ">=3.10.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/marceljanicki/PyExalus"